// Produced by Acceleo Cpp Generator 1.1.0-R7S1-20151214



package dataControllerUtils.protobuf;

message DataQueryResponse {
extensions 15 to 107;

  optional uint64 queryId = 1;
  enum Status {
    OK = 0;
    ERROR = 1;
    WARNING = 2;
  }
  optional Status status = 2 [default = OK];
  optional string reason = 3;
}
